--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Dekoracje balonowe - Tarnobrzeg, Sandomierz i okolice - Happyballoon</title>
+    <title>Framework 2025</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
