Correction margin in header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="nav__list">
                 <li class="nav__list-item"><a href="" class="nav__list-link">Strona główna</a></li>
                 <li class="nav__list-item"><a href="" class="nav__list-link">Oferta</a></li>
-                <li class="nav__list-item"><a href="" class="nav__list-link">Galeria</a></li>
+                <li class="nav__list-item"><a href="" class="nav__list-link">Realizacje</a></li>
                 <li class="nav__list-item"><a href="" class="nav__list-link">Cennik</a></li>
                 <li class="nav__list-item"><a href="" class="nav__list-link">Kontakt</a></li>
             </ul>
@@ -61,8 +61,8 @@
                 </div>
             </div>
         </section>
-        <section class="gallery">
-            <h2>Galeria</h2>
+        <section class="realizations">
+            <h2>Realizacje</h2>
         </section>
         <section class="price">
             <h2>Cennik</h2>
