--- a/index.html
+++ b/index.html
@@ -171,7 +171,26 @@
     <footer class="footer">
         <section class="contact">
             <h2>Kontakt</h2>
-
+            <div class="container">
+                <div class="wrapper-form">
+                    <form id="contactForm">
+                        <div class="form-group">
+                            <label for="name">Imię:</label>
+                            <input type="text" id="name" name="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Adres e-mail:</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Wiadomość:</label>
+                            <textarea id="message" name="message" rows="4" required></textarea>
+                        </div>
+                        <button type="submit">Wyślij</button>
+                    </form>
+                    <div id="responseMessage"></div>
+                </div>
+            </div>
         </section>
         <div class="container footer__bottom">
             <p>&copy; 2024 Firma XYZ. Wszelkie prawa zastrzeżone.</p>
