change of appearance

--- a/index.html
+++ b/index.html
@@ -159,6 +159,20 @@
                                 <td data-label="Cena (zł)">500</td>
                                 <td data-label="Dostępność">Dostępna</td>
                             </tr>
+                            <tr>
+                                <td data-label="Usługa">Projektowanie wnętrz</td>
+                                <td data-label="Opis">Tworzenie unikalnych projektów wnętrz.</td>
+                                <td data-label="Czas realizacji">2 tygodnie</td>
+                                <td data-label="Cena (zł)">1500</td>
+                                <td data-label="Dostępność">Dostępna</td>
+                            </tr>
+                            <tr>
+                                <td data-label="Usługa">Malowanie ścian</td>
+                                <td data-label="Opis">Profesjonalne malowanie z użyciem wysokiej jakości farb.</td>
+                                <td data-label="Czas realizacji">1 dzień</td>
+                                <td data-label="Cena (zł)">500</td>
+                                <td data-label="Dostępność">Dostępna</td>
+                            </tr>
                             <!-- Dodaj więcej wierszy według potrzeb -->
                         </tbody>
                     </table>
