change of appearance2

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <section class="contact">
             <h2>Kontakt</h2>
             <div class="container">
-                <div class="wrapper-form">
+                <div class="wrapper-contact">
                     <form id="contactForm">
                         <div class="form-group">
                             <label for="name">Imię:</label>
@@ -203,6 +203,33 @@
                         <button type="submit">Wyślij</button>
                     </form>
                     <div id="responseMessage"></div>
+                </div>
+                <div class="wrapper-contact">
+                    <div class="contact-container">
+                        <h1>Dane Kontaktowe</h1>
+                        <div class="contact-info">
+                            <div class="info-item">
+                                <h2>Adres</h2>
+                                <p>ul. Przykładowa 123<br>00-000 Miasto</p>
+                            </div>
+                            <div class="info-item">
+                                <h2>Telefon</h2>
+                                <p><a href="tel:+48123456789">+48 123 456 789</a></p>
+                            </div>
+                            <div class="info-item">
+                                <h2>E-mail</h2>
+                                <p><a href="mailto:kontakt@example.com">kontakt@example.com</a></p>
+                            </div>
+                            <div class="info-item">
+                                <h2>Media Społecznościowe</h2>
+                                <ul class="social-links">
+                                    <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
+                                    <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
+                                    <li><a href="https://www.youtube.com" target="_blank">YouTube</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
