--- a/index.html
+++ b/index.html
@@ -5,238 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link type="image/x-icon" rel="shortcut icon" href="favicon.ico">
-    <meta name="description" content="Tworzenie dekoracji balonowych na dla firm i osób prywatnych">
+    <meta name="description" content="Framework">
     <meta name="theme-color" content="#0cb9ee">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Framework 2025</title>
+    <title>Atom1</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-    <nav class="nav">
-        <div class="container">
-            <div class="logo">LOGO</div>
-            <ul class="nav__list">
-                <li class="nav__list-item"><a href="" class="nav__list-link">Strona główna</a></li>
-                <li class="nav__list-item"><a href="" class="nav__list-link">Oferta</a></li>
-                <li class="nav__list-item"><a href="" class="nav__list-link">Realizacje</a></li>
-                <li class="nav__list-item"><a href="" class="nav__list-link">Cennik</a></li>
-                <li class="nav__list-item"><a href="" class="nav__list-link">Kontakt</a></li>
-            </ul>
-        </div>
-    </nav>
+
     <header class="header">
-        <h1>Najważniejszy nagłówek na stronie</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint eos ex commodi blanditiis, eveniet, debitis
-            cumque sed, tempore ea esse voluptatem quibusdam magni sunt! Impedit voluptatum, aperiam culpa qui placeat
-            eum reprehenderit saepe soluta! Sequi sint autem qui quas quaerat.</p>
-        <div class="header__wrap">
-            <a href="" class="btn">Zobacz ofertę</a>
-            <a href="" class="btn">Złóż zamówienie</a>
-        </div>
+        <h1>Framework Atom1</h1>
     </header>
-    <main>
-        <section class="offer">
-            <h2>Oferta</h2>
-            <div class="container">
-                <div class="offer__item">
-                    <h3>Usługa</h3>
-                </div>
-                <div class="offer__item">
-                    <h3>Usługa</h3>
-                </div>
-                <div class="offer__item">
-                    <h3>Usługa</h3>
-                </div>
-                <div class="offer__item">
-                    <h3>Usługa</h3>
-                </div>
-                <div class="offer__item">
-                    <h3>Usługa</h3>
-                </div>
-                <div class="offer__item">
-                    <h3>Usługa</h3>
-                </div>
-            </div>
-        </section>
-        <section class="realizations">
-            <h2>Realizacje</h2>
-            <div class="container">
-                <div class="row">
-                    <div class="realizations__image"><img src="./img/ph_img.png" alt=""></div>
-                    <div class="realizations__text">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ab quisquam dolore
-                            mollitia. Corrupti rerum quam cumque sed dolore provident.</p>
-                        <ul>
-                            <li>Czerwona Róża</li>
-                            <li>Góry i Morze</li>
-                            <li>Małe Szare Kotki</li>
-                            <li>Szybkie Samochody</li>
-                            <li>Duży Zamek na Wzgórzu</li>
-                        </ul>
-                        <a href="" class="btn">Zobacz</a>
-                    </div>
-
-                </div>
-                <div class="row">
-                    <div class="realizations__image"><img src="./img/ph_img.png" alt=""></div>
-                    <div class="realizations__text">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ab quisquam dolore
-                            mollitia. Corrupti rerum quam cumque sed dolore provident.</p>
-                        <ul>
-                            <li>Czerwona Róża</li>
-                            <li>Góry i Morze</li>
-                            <li>Małe Szare Kotki</li>
-                            <li>Szybkie Samochody</li>
-                            <li>Duży Zamek na Wzgórzu</li>
-                        </ul>
-                        <a href="" class="btn">Zobacz</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="realizations__image"><img src="./img/ph_img.png" alt=""></div>
-                    <div class="realizations__text">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ab quisquam dolore
-                            mollitia. Corrupti rerum quam cumque sed dolore provident.</p>
-                        <ul>
-                            <li>Czerwona Róża</li>
-                            <li>Góry i Morze</li>
-                            <li>Małe Szare Kotki</li>
-                            <li>Szybkie Samochody</li>
-                            <li>Duży Zamek na Wzgórzu</li>
-                        </ul>
-                        <a href="" class="btn">Zobacz</a>
-                    </div>
-                </div>
-
-            </div>
-        </section>
-        <section class="price">
-            <h2>Cennik</h2>
-            <div class="container">
-                <div class="wrapper-table">
-                    <table class="table-default">
-                        <thead>
-                            <tr>
-                                <th>Usługa</th>
-                                <th>Opis</th>
-                                <th>Czas realizacji</th>
-                                <th>Cena (zł)</th>
-                                <th>Zobacz</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td data-label="Usługa">Projektowanie wnętrz</td>
-                                <td data-label="Opis">Tworzenie unikalnych projektów wnętrz.</td>
-                                <td data-label="Czas realizacji">2 tygodnie</td>
-                                <td data-label="Cena (zł)">1500</td>
-                                <td data-label="Przykład"><a href="">Przykład</a></td>
-                            </tr>
-                            <tr>
-                                <td data-label="Usługa">Malowanie ścian</td>
-                                <td data-label="Opis">Profesjonalne malowanie z użyciem wysokiej jakości farb.</td>
-                                <td data-label="Czas realizacji">1 dzień</td>
-                                <td data-label="Cena (zł)">500</td>
-                                <td data-label="Dostępność">Dostępna</td>
-                            </tr>
-                            <tr>
-                                <td data-label="Usługa">Projektowanie wnętrz</td>
-                                <td data-label="Opis">Tworzenie unikalnych projektów wnętrz.</td>
-                                <td data-label="Czas realizacji">2 tygodnie</td>
-                                <td data-label="Cena (zł)">1500</td>
-                                <td data-label="Dostępność">Dostępna</td>
-                            </tr>
-                            <tr>
-                                <td data-label="Usługa">Malowanie ścian</td>
-                                <td data-label="Opis">Profesjonalne malowanie z użyciem wysokiej jakości farb.</td>
-                                <td data-label="Czas realizacji">1 dzień</td>
-                                <td data-label="Cena (zł)">500</td>
-                                <td data-label="Dostępność">Dostępna</td>
-                            </tr>
-                            <tr>
-                                <td data-label="Usługa">Projektowanie wnętrz</td>
-                                <td data-label="Opis">Tworzenie unikalnych projektów wnętrz.</td>
-                                <td data-label="Czas realizacji">2 tygodnie</td>
-                                <td data-label="Cena (zł)">1500</td>
-                                <td data-label="Dostępność">Dostępna</td>
-                            </tr>
-                            <tr>
-                                <td data-label="Usługa">Malowanie ścian</td>
-                                <td data-label="Opis">Profesjonalne malowanie z użyciem wysokiej jakości farb.</td>
-                                <td data-label="Czas realizacji">1 dzień</td>
-                                <td data-label="Cena (zł)">500</td>
-                                <td data-label="Dostępność">Dostępna</td>
-                            </tr>
-                            <!-- Dodaj więcej wierszy według potrzeb -->
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </section>
-    </main>
-
-
-    <footer class="footer">
-        <section class="contact">
-            <h2>Kontakt</h2>
-            <div class="container">
-                <div class="wrapper-contact">
-                    <form id="contactForm">
-                        <div class="form-group">
-                            <label for="name">Imię:</label>
-                            <input type="text" id="name" name="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Adres e-mail:</label>
-                            <input type="email" id="email" name="email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Wiadomość:</label>
-                            <textarea id="message" name="message" rows="4" required></textarea>
-                        </div>
-                        <button type="submit">Wyślij</button>
-                    </form>
-                    <div id="responseMessage"></div>
-                </div>
-                <div class="wrapper-contact">
-                    <div class="contact-container">
-                        <h1>Dane Kontaktowe</h1>
-                        <div class="contact-info">
-                            <div class="info-item">
-                                <h2>Adres</h2>
-                                <p>ul. Przykładowa 123<br>00-000 Miasto</p>
-                            </div>
-                            <div class="info-item">
-                                <h2>Telefon</h2>
-                                <p><a href="tel:+48123456789">+48 123 456 789</a></p>
-                            </div>
-                            <div class="info-item">
-                                <h2>E-mail</h2>
-                                <p><a href="mailto:kontakt@example.com">kontakt@example.com</a></p>
-                            </div>
-                            <div class="info-item">
-                                <h2>Media Społecznościowe</h2>
-                                <ul class="social-links">
-                                    <li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
-                                    <li><a href="https://www.instagram.com" target="_blank">Instagram</a></li>
-                                    <li><a href="https://www.youtube.com" target="_blank">YouTube</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <div class="container footer__bottom">
-            <p>&copy; 2024 Firma XYZ. Wszelkie prawa zastrzeżone.</p>
-        </div>
-    </footer>
+    
 
     <script src="js/main.js"></script>
 </body>
