--- a/index.html
+++ b/index.html
@@ -16,10 +16,23 @@
 
 <body>
 
+    <nav class="nav">
+        <div class="container">
+            <div class="logo">LOGO</div>
+            <ul class="nav__list">
+                <li class="nav__list-item"><a href="" class="nav__list-link">Strona główna</a></li>
+                <li class="nav__list-item"><a href="" class="nav__list-link">Oferta</a></li>
+                <li class="nav__list-item"><a href="" class="nav__list-link">Galeria</a></li>
+                <li class="nav__list-item"><a href="" class="nav__list-link">Cennik</a></li>
+                <li class="nav__list-item"><a href="" class="nav__list-link">Kontakt</a></li>
+            </ul>
+        </div>
+    </nav>
+    
     <header class="header">
         <h1>Framework Atom1</h1>
     </header>
-    
+
 
     <script src="js/main.js"></script>
 </body>
