Added paragrapf and buttons in header

--- a/index.html
+++ b/index.html
@@ -28,11 +28,23 @@
             </ul>
         </div>
     </nav>
-    
+
     <header class="header">
         <h1>Framework Atom1</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque iure soluta accusamus
+            incidunt accusantium voluptatem fugit laborum ullam esse, ipsa fugiat facere dolores ipsum! Ratione
+            aspernatur laboriosam sint earum dolore. Inissimos qui tenetur reprehenderit odio magni obcaecati iusto eius earum, commodi delectus.</p>
+        <div class="button-box">
+            <button class="btn btn--default"><a href="">Zamów wycenę</a></button>
+            <button class="btn btn--default"><a href="">Dowiedz się więcej</a></button>
+        </div>
     </header>
 
+    <section class="section offer">
+        <div class="container">
+            <h2>Oferta</h2>
+        </div>
+    </section>
 
     <script src="js/main.js"></script>
 </body>
