--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <h1>Framework Atom1</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque iure soluta accusamus
             incidunt accusantium voluptatem fugit laborum ullam esse, ipsa fugiat facere dolores ipsum! Ratione
-            aspernatur laboriosam sint earum dolore. Inissimos qui tenetur reprehenderit odio magni obcaecati iusto eius earum, commodi delectus.</p>
+            aspernatur laboriosam sint earum dolore. Inissimos qui tenetur reprehenderit odio magni obcaecati iusto eius
+            earum, commodi delectus.</p>
         <div class="button-box">
             <button class="btn btn--default"><a href="">Zamów wycenę</a></button>
             <button class="btn btn--default"><a href="">Dowiedz się więcej</a></button>
@@ -43,6 +44,24 @@
     <section class="section offer">
         <div class="container">
             <h2>Oferta</h2>
+            <div class="offer__item">
+                <h3>Usługa</h3>
+            </div>
+            <div class="offer__item">
+                <h3>Usługa</h3>
+            </div>
+            <div class="offer__item">
+                <h3>Usługa</h3>
+            </div>
+            <div class="offer__item">
+                <h3>Usługa</h3>
+            </div>
+            <div class="offer__item">
+                <h3>Usługa</h3>
+            </div>
+            <div class="offer__item">
+                <h3>Usługa</h3>
+            </div>
         </div>
     </section>
 
