--- a/index.html
+++ b/index.html
@@ -40,30 +40,45 @@
             <button class="btn btn--default"><a href="">Dowiedz się więcej</a></button>
         </div>
     </header>
-
-    <section class="section offer">
-        <div class="container">
+    <main>
+        <section class="section offer">
             <h2>Oferta</h2>
-            <div class="offer__item">
-                <h3>Usługa</h3>
+            <div class="container">
+                <div class="offer__item">
+                    <h3>Usługa</h3>
+                </div>
+                <div class="offer__item">
+                    <h3>Usługa</h3>
+                </div>
+                <div class="offer__item">
+                    <h3>Usługa</h3>
+                </div>
+                <div class="offer__item">
+                    <h3>Usługa</h3>
+                </div>
+                <div class="offer__item">
+                    <h3>Usługa</h3>
+                </div>
+                <div class="offer__item">
+                    <h3>Usługa</h3>
+                </div>
             </div>
-            <div class="offer__item">
-                <h3>Usługa</h3>
-            </div>
-            <div class="offer__item">
-                <h3>Usługa</h3>
-            </div>
-            <div class="offer__item">
-                <h3>Usługa</h3>
-            </div>
-            <div class="offer__item">
-                <h3>Usługa</h3>
-            </div>
-            <div class="offer__item">
-                <h3>Usługa</h3>
-            </div>
+        </section>
+        <section class="section realizations">
+            <h2>Realizacje</h2>
+        </section>
+        <section class="section price">
+            <h2>Cennik</h2>
+        </section>
+    </main>
+    <footer class="footer">
+        <section class="contact">
+            <h2>Kontakt</h2>
+        </section>
+        <div class="footer__bottom">
+
         </div>
-    </section>
+    </footer>
 
     <script src="js/main.js"></script>
 </body>
