Add section realizations

--- a/index.html
+++ b/index.html
@@ -66,6 +66,58 @@
         </section>
         <section class="section realizations">
             <h2>Realizacje</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="realizations__image"><img src="./img/ph_img.png" alt=""></div>
+                    <div class="realizations__text">
+                        <h3>Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ab quisquam dolore
+                            mollitia. Corrupti rerum quam cumque sed dolore provident.</p>
+                        <ul>
+                            <li>Czerwona Róża</li>
+                            <li>Góry i Morze</li>
+                            <li>Małe Szare Kotki</li>
+                            <li>Szybkie Samochody</li>
+                            <li>Duży Zamek na Wzgórzu</li>
+                        </ul>
+                        <a href="" class="btn">Zobacz</a>
+                    </div>
+
+                </div>
+                <div class="row">
+                    <div class="realizations__image"><img src="./img/ph_img.png" alt=""></div>
+                    <div class="realizations__text">
+                        <h3>Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ab quisquam dolore
+                            mollitia. Corrupti rerum quam cumque sed dolore provident.</p>
+                        <ul>
+                            <li>Czerwona Róża</li>
+                            <li>Góry i Morze</li>
+                            <li>Małe Szare Kotki</li>
+                            <li>Szybkie Samochody</li>
+                            <li>Duży Zamek na Wzgórzu</li>
+                        </ul>
+                        <a href="" class="btn">Zobacz</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="realizations__image"><img src="./img/ph_img.png" alt=""></div>
+                    <div class="realizations__text">
+                        <h3>Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ab quisquam dolore
+                            mollitia. Corrupti rerum quam cumque sed dolore provident.</p>
+                        <ul>
+                            <li>Czerwona Róża</li>
+                            <li>Góry i Morze</li>
+                            <li>Małe Szare Kotki</li>
+                            <li>Szybkie Samochody</li>
+                            <li>Duży Zamek na Wzgórzu</li>
+                        </ul>
+                        <a href="" class="btn">Zobacz</a>
+                    </div>
+                </div>
+
+            </div>
         </section>
         <section class="section price">
             <h2>Cennik</h2>
