--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div class="container">
             <div class="logo">LOGO</div>
             <ul class="nav__list">
-                <li class="nav__list-item"><a href="" class="nav__list-link">Strona główna</a></li>
-                <li class="nav__list-item"><a href="" class="nav__list-link">Oferta</a></li>
-                <li class="nav__list-item"><a href="" class="nav__list-link">Galeria</a></li>
-                <li class="nav__list-item"><a href="" class="nav__list-link">Cennik</a></li>
-                <li class="nav__list-item"><a href="" class="nav__list-link">Kontakt</a></li>
+                <li class="nav__list-item"><a href="" class="btn">Strona główna</a></li>
+                <li class="nav__list-item"><a href="" class="btn">Oferta</a></li>
+                <li class="nav__list-item"><a href="" class="btn">Galeria</a></li>
+                <li class="nav__list-item"><a href="" class="btn">Cennik</a></li>
+                <li class="nav__list-item"><a href="" class="btn">Kontakt</a></li>
             </ul>
         </div>
     </nav>
@@ -36,8 +36,8 @@
             aspernatur laboriosam sint earum dolore. Inissimos qui tenetur reprehenderit odio magni obcaecati iusto eius
             earum, commodi delectus.</p>
         <div class="button-box">
-            <button class="btn btn--default"><a href="">Zamów wycenę</a></button>
-            <button class="btn btn--default"><a href="">Dowiedz się więcej</a></button>
+            <button><a href="" class="btn">Zamów wycenę</a></button>
+            <button><a href="" class="btn">Dowiedz się więcej</a></button>
         </div>
     </header>
     <main>
@@ -80,7 +80,7 @@
                             <li>Szybkie Samochody</li>
                             <li>Duży Zamek na Wzgórzu</li>
                         </ul>
-                        <a href="" class="btn">Zobacz</a>
+                        <button><a href="" class="btn">Zobacz</a></button>
                     </div>
 
                 </div>
@@ -97,7 +97,7 @@
                             <li>Szybkie Samochody</li>
                             <li>Duży Zamek na Wzgórzu</li>
                         </ul>
-                        <a href="" class="btn">Zobacz</a>
+                        <button><a href="" class="btn">Zobacz</a></button>
                     </div>
                 </div>
                 <div class="row">
@@ -113,7 +113,7 @@
                             <li>Szybkie Samochody</li>
                             <li>Duży Zamek na Wzgórzu</li>
                         </ul>
-                        <a href="" class="btn">Zobacz</a>
+                        <button><a href="" class="btn">Zobacz</a></button>
                     </div>
                 </div>
 
