Add section price, add component table

--- a/index.html
+++ b/index.html
@@ -121,6 +121,66 @@
         </section>
         <section class="section price">
             <h2>Cennik</h2>
+            <div class="container">
+                <div class="wrapper-table">
+                    <table class="table-default">
+                        <thead>
+                            <tr>
+                                <th>Usługa</th>
+                                <th>Opis</th>
+                                <th>Czas realizacji</th>
+                                <th>Cena (zł)</th>
+                                <th>Zobacz</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td data-label="Usługa">Projektowanie wnętrz</td>
+                                <td data-label="Opis">Tworzenie unikalnych projektów wnętrz.</td>
+                                <td data-label="Czas realizacji">2 tygodnie</td>
+                                <td data-label="Cena (zł)">1500</td>
+                                <td data-label="Przykład"><a href="">Przykład</a></td>
+                            </tr>
+                            <tr>
+                                <td data-label="Usługa">Malowanie ścian</td>
+                                <td data-label="Opis">Profesjonalne malowanie z użyciem wysokiej jakości farb.</td>
+                                <td data-label="Czas realizacji">1 dzień</td>
+                                <td data-label="Cena (zł)">500</td>
+                                <td data-label="Dostępność">Dostępna</td>
+                            </tr>
+                            <tr>
+                                <td data-label="Usługa">Projektowanie wnętrz</td>
+                                <td data-label="Opis">Tworzenie unikalnych projektów wnętrz.</td>
+                                <td data-label="Czas realizacji">2 tygodnie</td>
+                                <td data-label="Cena (zł)">1500</td>
+                                <td data-label="Dostępność">Dostępna</td>
+                            </tr>
+                            <tr>
+                                <td data-label="Usługa">Malowanie ścian</td>
+                                <td data-label="Opis">Profesjonalne malowanie z użyciem wysokiej jakości farb.</td>
+                                <td data-label="Czas realizacji">1 dzień</td>
+                                <td data-label="Cena (zł)">500</td>
+                                <td data-label="Dostępność">Dostępna</td>
+                            </tr>
+                            <tr>
+                                <td data-label="Usługa">Projektowanie wnętrz</td>
+                                <td data-label="Opis">Tworzenie unikalnych projektów wnętrz.</td>
+                                <td data-label="Czas realizacji">2 tygodnie</td>
+                                <td data-label="Cena (zł)">1500</td>
+                                <td data-label="Dostępność">Dostępna</td>
+                            </tr>
+                            <tr>
+                                <td data-label="Usługa">Malowanie ścian</td>
+                                <td data-label="Opis">Profesjonalne malowanie z użyciem wysokiej jakości farb.</td>
+                                <td data-label="Czas realizacji">1 dzień</td>
+                                <td data-label="Cena (zł)">500</td>
+                                <td data-label="Dostępność">Dostępna</td>
+                            </tr>
+                            <!-- Dodaj więcej wierszy według potrzeb -->
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="footer">
